--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description" 
-    content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix park">
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix park">
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- Title -->
     <title>Love Running</title>
@@ -15,8 +15,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-<!-- Stylesheet -->
-<link rel="stylesheet" href="assets/css/style.css">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
-                <li><a href="" >Gallery</a></li>
+                <li><a href="">Gallery</a></li>
                 <li><a href="">Sign Up</a></li>
             </ul>
         </nav>
@@ -39,8 +39,16 @@
     <!-- Main content -->
     <main>Main content</main>
 
-   <!-- Footer -->
-    <footer>footer<footer/>
+    <!-- Footer -->
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </footer>
+
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/4c48fa6f4b.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
