Style footer icons for all screen sizes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- Footer -->
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)">
