--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
             </ul>
         </nav>
     </header>
-
-    <!-- Main content -->
+  <!-- Main content -->
     <main>
         <section id="hero">
             <div id="cover-text">
@@ -46,8 +45,7 @@
                 <h3>Dublin Docklands & Phoenix Park</h3>
             </div>
         </section>
-
-        <!-- Reasons section-->
+ <!-- Reasons section-->
         <section id="reasons">
             <h2>Why Love running with us?</h2>
             <div id="benefits">
@@ -78,8 +76,10 @@
                             you out of a running funk or low mood, and inspire you to try new events.</p>
                     </div>
                 </div>
-
-            </div>
+                <div id="benefits-image">
+                    <div id="circle-cover-bg"></div>
+                </div>
+          </div>
      </section>
     </main>
 
