Add signup section

--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@
 
     <!-- Main content -->
     <main>
+        <!-- Hero section -->
         <section id="hero">
             <div id="cover-text">
                 <h2>Love Running</h2>
                 <h3>Dublin Docklands & Phoenix Park</h3>
             </div>
         </section>
+        
+        <!-- Reasons section -->
         <section id="reasons">
             <h2>Why Love running with us?</h2>
             <div id="benefits">
@@ -122,7 +125,7 @@
                     <p>11:30</p>
                 </div>
             </div>
-     </section>
+        </section>
     </main>
 
     <!-- Footer -->
